# vvvvvvvvvvvvv

./: README.md  allcod  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vcam/model/: AppInfo.kt
app/src/main/java/com/vcam/service/: FloatWindowService.kt  VCamService.kt
app/src/main/java/com/vcam/ui/: CodeGateActivity.kt  MainActivity.kt
app/src/main/java/com/vcam/ui/adapter/: AppListAdapter.kt
app/src/main/java/com/vcam/utils/: AppLoader.kt  CameraInjector.kt  MediaUtils.kt  RootManager.kt
app/src/main/java/com/vcam/viewmodel/: MainViewModel.kt
app/src/main/jni/: CMakeLists.txt  image_converter.cpp  v4l2_injector.cpp  v4l2_injector.h  vcam_inject.cpp  vcam_jni.cpp
app/src/main/res/drawable/: bg_badge.xml  bg_btn_outline.xml  bg_card_dark.xml  bg_input.xml  bg_status_dot.xml  ic_camera_vc.xml  ic_close.xml  ic_image.xml  ic_launcher_fg.xml  ic_refresh.xml  ic_root.xml  ic_search.xml  ic_target.xml  ic_video.xml
app/src/main/res/layout/: activity_code_gate.xml  activity_main.xml  float_window.xml  item_app.xml
app/src/main/res/mipmap-xhdpi/: ic_launcher_round.xml
app/src/main/res/mipmap-xxxhdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
